--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <th style="font-weight: bold">Input your Final exam scores</th>
     </tr>
     <tr>
-        <td><input class='score' style="width: 100%" type="number" id="testScore" onkeyup="inform();"></td>
-        <td><input class='score' style="width: 100%" type="number" id="midScore" onkeyup="inform();"></td>
-        <td><input class='score' style="width: 100%" type="number" id="finalScore" onkeyup="inform();"></td>
+        <td><input style="width: 100%" type="number" id="testScore" onkeyup="inform();"></td>
+        <td><input style="width: 100%" type="number" id="midScore" onkeyup="inform();"></td>
+        <td><input style="width: 100%" type="number" id="finalScore" onkeyup="inform();"></td>
         <td>
             <button type="button" onclick="Check();">Check</button>
         </td>
